CHANGES.txt - 04/23/2005
------------------------

CHANGES IN HTMLDOC v1.8.25

    NEW FEATURES

	- Added "--overflow" and "--no-overflow" command-line
	  options to show or hide the content-too-large errors;
	  the default is "--no-overflow".

    BUG FIXES

	- "$HFIMAGEn" didn't work in a header/footer string.
	- HTMLDOC could crash when rendering a table.
	- Book files were not used in CGI mode (STR #69)


CHANGES IN HTMLDOC v1.8.24

    NEW FEATURES

	- HTMLDOC now provides limited cookie support via the
	  "--cookies" command-line option and via the cookies
	  passed by a browser in CGI mode.
	- HTMLDOC now features a CGI mode which provides PDF
	  conversion functionality for web servers.
	- HTMLDOC now generates a document outline for each
	  input file or URL in webpage mode; the outline shows
	  the title for the file and links to the first page
	  containing that file.
	- HTMLDOC now offers an "htmlsep" output type which
	  generates HTML output with a separate file for each
	  heading in the table of contents.
	- HTMLDOC now includes LINK elements in generated HTML
	  so that intelligent browsers like Mozilla can show
	  next/prev/contents/top buttons.
	- HTMLDOC now supports the BORDERCOLOR attribute for
	  tables, a MSIE extension.
	- The "strict HTML" mode now reports unresolved local
	  links.
	- Added support for HP LaserJet 5000 and Xerox DocuPrint
	  2000/100 printer commands.
	- Added multiple header/footer image support.
	- Links to external URLs are now resolved so that the
	  output file can be moved without affecting them.

    CHANGES

	- The command-line now allows --fontsize values from 4
	  to 26 to match the GUI.
	- Now use a 0.001 point tolerance when checking for
	  content that overflows the page/cell.
	- HTMLDOC no longer enables interpolation of 2-color
	  images.
	- The default vertical alignment of images is "BOTTOM"
	  to match the HTML specification.
	- Paragraph spacing is only applied to the first table
	  after a paragraph.